# git-scm

./: Cargo.toml  README.md
docs/: Dockerfile  book.toml
docs/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json  solution.html
docs/book/features/: cloning_repositories.html  create_and_merging_branches.html  detect_conflicts.html  ignoring_staging_and_committing.html  init_repository.html  performing_diffs.html  view_commit_history.html
docs/src/: SUMMARY.md  solution.md  the_problem.md
docs/src/features/: create_and_merging_branches.md  detect_conflicts.md  ignoring_staging_and_committing.md  init_repository.md  performing_diffs.md  view_commit_history.md
src/: main.rs  script.rs
src/git/: blob.rs  branch.rs  commit.rs  diff.rs  index.rs  merge.rs  mod.rs  repository.rs
